# pydenote

./: .envrc  .gitignore  .pre-commit-config.yaml  ChangeLog  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: ide.md  zettledeft.md
src/pydenote/: attributes.py  denote.py  ojc.py  pdn.py  pmv.py  zdc.py
src/pydenote/resources/: __version__.py
stubs/frontmatter/: __init__.pyi
tests/: test_attributes.py  test_ojc.py  test_pdn.py  test_pmv.py  test_zdc.py
tests/resources/: 20200531T190600--2020-may_journal.md  20200531T190600--first-note_journal.md  2021-10-27-0541 Connections of notes.md  sample_long.org  sample_md_nokeysy.md  sample_md_to_rename.md  sample_short.org
