[project]
name = "pydenote"
version = "0.1.0"
description = "Utilities for Denote naming scheme notes."
authors = [
    {name = "Joozsef Varga", email = "joozsef@ho.me"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
